--- a/base_location_geonames_import/wizard/geonames_import_view.xml
+++ b/base_location_geonames_import/wizard/geonames_import_view.xml
@@ -6,7 +6,7 @@
             <field name="name">asterisk.server.company</field>
             <field name="model">better.zip.geonames.import</field>
             <field name="arch"  type="xml">
-                <form string="Import from Geonames" version="7.0">
+                <form string="Import from Geonames">
                     <group name="main">
                         <field name="country_id"/>
                         <label string="For the country selected above, this wizard will download the latest version of the list of cities from geonames.org, create new location entries if not found already in the system, and DELETE MISSING ENTRIES from new file."
