--- a/partner_relations/view/res_partner.xml
+++ b/partner_relations/view/res_partner.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+
         <record id="view_res_partner_filter" model="ir.ui.view">
             <field name="name">partner_relations.view_partner_filter</field>
             <field name="inherit_id" ref="base.view_res_partner_filter" />
@@ -15,6 +17,7 @@
                 </data>
             </field>
         </record>
+
         <record id="view_partner_form" model="ir.ui.view">
             <field name="name">partner_relations.view_partner_form</field>
             <field name="inherit_id" ref="base.view_partner_form" />
@@ -60,7 +63,6 @@
                                             'readonly': [('type_selection_id','=',False)],
                                         }"
                                         options="{'create': false, 'create_edit': false}"
-                                        widget="many2one_clickable"
                                     />
                                     <field name="date_start" />
                                     <field name="date_end" />
@@ -101,7 +103,6 @@
                                             'readonly': [('type_selection_id','=',False)],
                                         }"
                                         options="{'create': false, 'create_edit': false}"
-                                        widget="many2one_clickable"
                                     />
                                     <field name="date_start" />
                                     <field name="date_end" />
@@ -128,5 +129,6 @@
             res_model="res.partner.relation.all"
             domain="[('this_partner_id', 'in', active_ids)]"
             key2="client_action_multi" />
+
     </data>
 </openerp>
