--- a/partner_relations/view/res_partner.xml
+++ b/partner_relations/view/res_partner.xml
@@ -23,103 +23,22 @@
             <field name="inherit_id" ref="base.view_partner_form" />
             <field name="model">res.partner</field>
             <field type="xml" name="arch">
-                <data>
-                    <xpath expr="//sheet/notebook" position="inside">
-                        <page string="Relations">
-                            <field
-                                name="relation_ids"
-                                context="{
-                                    'active_model': 'res.partner',
-                                    'active_id': id, 'active_ids': [id],
-                                    'active_test': False,
-                                }"
-                            >
-                                <tree
-                                    colors="gray:is_relation_expired==True or not active;blue:is_relation_future==True"
-                                >
-                                    <field
-                                        name="type_selection_id"
-                                        required="True"
-                                        context="{
-                                            'parent_model': 'res.partner',
-                                            'parent_id': parent.id,
-                                        }"
-                                        domain="[
-                                            '|',
-                                                ('contact_type_this', '=', parent.is_company and 'c' or 'p'),
-                                                ('contact_type_this', '=', False),
-                                            ('search_partner_category_this', '=', parent.category_id),
-
-                                        ]
-                                        "
-                                        options="{'create': false, 'create_edit': false}"
-                                        on_change="on_change_type_selection_id(type_selection_id)"
-                                    /> 
-                                    <field name="type_id" invisible="True" />
-                                    <field
-                                        name="partner_id_display"
-                                        required="True"
-                                        attrs="{
-                                            'readonly': [('type_selection_id','=',False)],
-                                        }"
-                                        options="{'create': false, 'create_edit': false}"
-                                    />
-                                    <field name="date_start" />
-                                    <field name="date_end" />
-                                    <field name="active" />
-                                    <field
-                                        name="is_relation_expired"
-                                        invisible="True"
-                                    />
-                                    <field
-                                        name="is_relation_future"
-                                        invisible="True"
-                                    />
-                                </tree>
-                                <form>
-                                    <field
-                                        name="type_selection_id"
-                                        required="True"
-                                        context="{
-                                            'parent_model': 'res.partner',
-                                            'parent_id': parent.id,
-                                        }"
-                                        domain="[
-                                            '|',
-                                                ('contact_type_this', '=', parent.is_company and 'c' or 'p'),
-                                                ('contact_type_this', '=', False),
-                                            ('search_partner_category_this', '=', parent.category_id),
-
-                                        ]
-                                        "
-                                        options="{'create': false, 'create_edit': false}"
-                                        on_change="on_change_type_selection_id(type_selection_id)"
-                                    /> 
-                                    <field name="type_id" invisible="True" />
-                                    <field
-                                        name="partner_id_display"
-                                        required="True"
-                                        attrs="{
-                                            'readonly': [('type_selection_id','=',False)],
-                                        }"
-                                        options="{'create': false, 'create_edit': false}"
-                                    />
-                                    <field name="date_start" />
-                                    <field name="date_end" />
-                                    <field name="active" />
-                                    <field
-                                        name="is_relation_expired"
-                                        invisible="True"
-                                    />
-                                    <field
-                                        name="is_relation_future"
-                                        invisible="True"
-                                    />
-                                </form>
-                            </field>
-                        </page>
-                    </xpath>
-                </data>
+                <xpath expr="//div[@name='buttons']" position="inside">
+                    <button class="oe_inline oe_stat_button"
+                            type="action"
+                            context="{
+                                'search_default_left_partner_id': active_id,
+                                'default_left_partner_id': active_id,
+                                'active_model': 'res.partner',
+                                'active_id': id,
+                                'active_ids': [id],
+                                'active_test': False,
+                            }"
+                            name="%(action_res_partner_relation)d"
+                            icon="fa-users">
+                        <field string="Relations" name="relation_count" widget="statinfo"/>
+                    </button>
+                </xpath>
             </field>
         </record>
 
