--- a/partner_relations/view/res_partner_relation.xml
+++ b/partner_relations/view/res_partner_relation.xml
@@ -1,9 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+
         <record id="form_res_partner_relation" model="ir.ui.view">
             <field name="model">res.partner.relation</field>
             <field type="xml" name="arch">
-                <form version="7.0" string="Partner relation">
+                <form string="Partner Relation">
                     <sheet>
                         <field name="left_partner_id" />
                         <field name="type_id" />
@@ -12,6 +14,60 @@
                 </form>
             </field>
         </record>
+
+        <record id="tree_res_partner_relation" model="ir.ui.view">
+            <field name="model">res.partner.relation</field>
+            <field name="arch" type="xml">
+                <tree
+                    string="Partner Relations"
+                    colors="gray:is_relation_expired==True or not active;blue:is_relation_future==True"
+                    editable="bottom"
+                >
+                    <field
+                        name="left_partner_id"
+                        attrs="{
+                            'readonly': [('type_selection_id','=',False)],
+                        }"
+                        options="{'create': false, 'create_edit': false}"
+                    />
+                    <field
+                        name="type_selection_id"
+                        requiread="True"
+                        context="{
+                            'parent_model': 'res.partner',
+                            'parent_id': parent.id,
+                        }"
+                        domain="[
+                            '|',
+                            ('contact_type_this', '=', parent.is_company and 'c' or 'p'),
+                            ('contact_type_this', '=', False),
+                            ('search_partner_category_this', '=', parent.category_id),
+                        ]"
+                        options="{'create': false, 'create_edit': false}"
+                        on_change="on_change_type_selection_id(type_selection_id)"
+                    />
+                    <field
+                        name="right_partner_id"
+                        attrs="{
+                            'readonly': [('type_selection_id','=',False)],
+                        }"
+                        options="{'create': false, 'create_edit': false}"
+                    />
+                    <field name="date_start" />
+                    <field name="date_end" />
+                    <field name="active" />
+                    <field
+                        name="is_relation_expired"
+                        invisible="True"
+                    />
+                    <field
+                        name="is_relation_future"
+                        invisible="True"
+                    />
+                </tree>
+            </field>
+        </record>
+
         <record id="action_show_right_relation_partners" model="ir.actions.server">
             <field name="sequence" eval="5"/>
             <field name="state">code</field>
@@ -21,12 +77,44 @@
             <field name="condition">True</field>
             <field name="name">Show partners</field>
         </record>
+
         <record id="action_show_right_relation_partners_value" model="ir.values">
             <field name="name">Show partners</field>
             <field name="key">action</field>
             <field name="key2">client_action_multi</field>
             <field name="model">res.partner.relation.all</field>
             <field name="value" eval="'ir.actions.server,%d' % ref('partner_relations.action_show_right_relation_partners')" />
+        </record>
+
+        <record id="search_res_partner_relation" model="ir.ui.view">
+            <field name="model">res.partner.relation</field>
+            <field name="arch" type="xml">
+                <search string="Search Relations">
+                    <field name="left_partner_id"/>
+                    <field name="right_partner_id"/>
+                    <field name="type_id"/>
+                    <group expand="0" string="Group By">
+                        <filter string="Source Partner" context="{'group_by':'left_partner_id'}"/>
+                        <filter string="Destination Partner" context="{'group_by':'right_partner_id'}"/>
+                        <filter string="Relationship Type" context="{'group_by':'type_id'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="action_res_partner_relation" model="ir.actions.act_window">
+            <field name="name">Relations</field>
+            <field name="res_model">res.partner.relation</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="tree_res_partner_relation"/>
+            <field name="search_view_id" ref="search_res_partner_relation"/>
+            <field name="context">{"search_default_left_partner_id": active_id}</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Record and track your partners' relations. Relations may be linked to other partners with a type either directly or inversely.
+                </p>
+            </field>
         </record>
 
     </data>
