--- a/partner_relations/view/res_partner_relation.xml
+++ b/partner_relations/view/res_partner_relation.xml
@@ -25,38 +25,53 @@
                 >
                     <field
                         name="left_partner_id"
-                        attrs="{
-                            'readonly': [('type_selection_id','=',False)],
-                        }"
                         options="{'create': false, 'create_edit': false}"
                     />
                     <field
                         name="type_selection_id"
-                        requiread="True"
-                        context="{
-                            'parent_model': 'res.partner',
-                            'parent_id': parent.id,
-                        }"
-                        domain="[
-                            '|',
-                            ('contact_type_this', '=', parent.is_company and 'c' or 'p'),
-                            ('contact_type_this', '=', False),
-                            ('search_partner_category_this', '=', parent.category_id),
-                        ]"
-                        options="{'create': false, 'create_edit': false}"
-                        on_change="on_change_type_selection_id(type_selection_id)"
-                    />
+                        required="True"
+                        options="{'create': false, 'create_edit': false}"/>
                     <field
                         name="right_partner_id"
-                        attrs="{
-                            'readonly': [('type_selection_id','=',False)],
-                        }"
                         options="{'create': false, 'create_edit': false}"
                     />
                     <field name="date_start" />
                     <field name="date_end" />
                     <field name="active" />
                 </tree>
+            </field>
+        </record>
+
+        <record id="search_res_partner_relation" model="ir.ui.view">
+            <field name="model">res.partner.relation</field>
+            <field name="arch" type="xml">
+                <search string="Search Relations">
+                    <field name="any_partner_id"/>
+                    <field name="left_partner_id"/>
+                    <field name="right_partner_id"/>
+                    <field name="type_id"/>
+                    <field name="active"/>
+                    <group expand="0" string="Group By">
+                        <filter string="Left Partner" context="{'group_by': 'left_partner_id'}"/>
+                        <filter string="Right Partner" context="{'group_by': 'right_partner_id'}"/>
+                        <filter string="Relationship Type" context="{'group_by': 'type_id'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="action_res_partner_relation" model="ir.actions.act_window">
+            <field name="name">Relations</field>
+            <field name="res_model">res.partner.relation</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="tree_res_partner_relation"/>
+            <field name="search_view_id" ref="search_res_partner_relation"/>
+            <field name="domain">[('active', '=', True)]</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">
+                    Record and track your partners' relations. Relations may be linked to other partners with a type either directly or inversely.
+                </p>
             </field>
         </record>
 
