--- a/partner_relations/view/res_partner_relation_all.xml
+++ b/partner_relations/view/res_partner_relation_all.xml
@@ -18,6 +18,8 @@
                         name="type_selection_id"
                         required="True"
                         domain="[
+                            '|',
+                            ('contact_type_this', '=', False),
                             ('contact_type_this', '=', contact_type),
                         ]"
                         options="{'create': false, 'create_edit': false}"
