--- a/partner_contact_base/views/res_partner.xml
+++ b/partner_contact_base/views/res_partner.xml
@@ -6,12 +6,15 @@
     <field name="name">Personal information page for contacts form</field>
     <field name="model">res.partner</field>
     <field name="inherit_id" ref="base.view_partner_form"/>
+    <field name="priority">2</field>
     <field name="arch" type="xml">
         <data>
             <xpath expr="//page[@name='internal_notes']" position="after">
-                <page name="personal_information"
+                <page name="personal_information_page"
                       string="Personal Information"
-                      attrs="{'invisible': [('is_company','=',True)]}"/>
+                      attrs="{'invisible': [('is_company','=',True)]}">
+                    <group name="personal_information_group"/>
+                </page>
             </xpath>
         </data>
   </field>
