--- a/partner_contact_gender/views/res_partner.xml
+++ b/partner_contact_gender/views/res_partner.xml
@@ -24,10 +24,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <record id="form" model="ir.ui.view">
     <field name="name">Partner gender</field>
     <field name="model">res.partner</field>
-    <field name="inherit_id" ref="base_contact.view_partner_form_inherit"/>
+    <field name="inherit_id" ref="partner_contact_personal_information_page.personal_information"/>
     <field name="arch" type="xml">
         <data>
-            <xpath expr="//field[@name='nationality_id']" position="after">
+            <xpath expr="//group[@name='personal_information_group']">
                 <field name="gender"/>
             </xpath>
         </data>
