--- a/partner_lastname2/views/res_user.xml
+++ b/partner_lastname2/views/res_user.xml
@@ -23,7 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <record id="users_form" model="ir.ui.view">
     <field name="name">Add second last name</field>
     <field name="model">res.users</field>
-    <field name="inherit_id" ref="partner_firstname.users_form"/>
+    <field name="inherit_id" ref="partner_firstname.view_users_form"/>
     <field name="arch" type="xml">
         <data>
             <xpath expr="//field[@name='firstname']" position="attributes">
