--- a/partner_industry/view/partner.xml
+++ b/partner_industry/view/partner.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
+
+        <record id="view_partner_filter" model="ir.ui.view">
+            <field name="name">res.partner.search.industry</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_res_partner_filter" />
+            <field name="arch" type="xml">
+                <field name="category_id" position="after">
+                    <field name="industry_ids" string="Industry Sector" filter_domain="[('industry_ids','ilike', self)]"/>
+                </field>
+                <!--
+                <xpath expr="//filter[@string='Country']" position="after">
+                    <filter string="Industry" context="{'group_by': 'industry_ids'}"/>
+                </xpath>
+                -->
+            </field>
+        </record>
+
         <record id="view_partner_form" model="ir.ui.view">
             <field name="name">res.partner.form.industry</field>
             <field name="model">res.partner</field>
@@ -12,5 +29,6 @@
                 </field>
             </field>
         </record>
+
     </data>
 </openerp>
