--- a/partner_industries/view/partner.xml
+++ b/partner_industries/view/partner.xml
@@ -8,11 +8,13 @@
             <field name="inherit_id" ref="base.view_res_partner_filter" />
             <field name="arch" type="xml">
                 <field name="category_id" position="after">
-                    <field name="industry_id" filter_domain="[('industry_ids','ilike', self)]"/>
+                    <field name="industry_ids" string="Industry Sector" filter_domain="[('industry_ids','ilike', self)]"/>
                 </field>
+                <!--
                 <xpath expr="//filter[@string='Country']" position="after">
-                    <filter string="Industry" context="{'group_by': 'industry_id'}"/>
+                    <filter string="Industry" context="{'group_by': 'industry_ids'}"/>
                 </xpath>
+                -->
             </field>
         </record>
 
@@ -22,7 +24,7 @@
             <field name="inherit_id" ref="base.view_partner_form" />
             <field name="arch" type="xml">
                 <field name="category_id" position="after">
-                    <field name="industry_id" placeholder="Industry Sector.."
+                    <field name="industry_ids" widget="many2many_tags" placeholder="Industry Sectors.."
                         attrs="{'invisible':[('is_company','=', False)]}"/>
                 </field>
             </field>
