--- a/partner_firstname/views/res_company.xml
+++ b/partner_firstname/views/res_company.xml
@@ -10,6 +10,12 @@
         <xpath expr="//group[@name='account_grp']" position="after">
             <group name="partner_grp" string="Partner">
                 <field name="names_order"/>
+                <button name="action_recalculate_names"
+                        string="Recalculate names"
+                        icon="gtk-execute"
+                        class="oe_read_only"
+                        type="object"
+                        help="Recalculate names for all partners. This process could take so much time if there are more than 10,000 active partners in this company"/>
             </group>
         </xpath>
     </field>
