--- a/partner_activity_report/wizard/partner_activity_selection.xml
+++ b/partner_activity_report/wizard/partner_activity_selection.xml
@@ -11,7 +11,7 @@
           <group>
 	        <field name="partner_information" colspan="4" />
 	        <field name="partner_address_information" colspan="4" />
-	        <field name="partner_crm_renouvellement" colspan="4" />
+	        <field name="partner_crm" colspan="4" />
 	        <field name="partner_invoice" colspan="4" />
 	        <field name="partner_sales_order" colspan="4" />
 	        <field name="partner_delivery_lines" colspan="4" />
@@ -33,18 +33,7 @@
                 view_mode="form"
                 target="new"
                 key2="client_action_multi"
-                id="open_credit_line_printer_wizard_menu_action"/>
-
-<!--     <record id="open_credit_line_printer_wizard" model="ir.actions.act_window"> -->
-<!--       <field name="name">Print Partner activity</field> -->
-<!--       <field name="res_model">partner.print.activity</field> -->
-<!--       <field name="src_model">res.partner</field> -->
-<!--       <field name="view_type">form</field> -->
-<!--       <field name="view_mode">form</field> -->
-<!--       <field name="view_id" ref="partner_print_activity_form"/> -->
-<!--       <field name="target">new</field> -->
-<!--       <field name="help">Print selected lines</field> -->
-<!--     </record> -->
+                id="open_partner_activity_report_wizard_menu_action"/>
 
   </data>
 </openerp>
