--- a/partner_activity_report_base/views/report.xml
+++ b/partner_activity_report_base/views/report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
-  <data noupdate="0">
+  <data >
     <report
       id="partner_activity_report_base.report_partner_activity"
       model="partner.print.activity"
