--- a/partner_activity_report_base/wizard/partner_activity_selection.xml
+++ b/partner_activity_report_base/wizard/partner_activity_selection.xml
@@ -6,13 +6,10 @@
       <field name="model">partner.print.activity</field>
       <field name="arch" type="xml">
         <form string="Print partner activity">
-          <separator string="Select part to print" colspan="4"/>
-          <newline/>
-          <group>
-	        <field name="partner_information" colspan="4" />
-	        <field name="partner_address_information" colspan="4" />
+          <group string="Select parts to print">
+	        <field name="partner_information" />
+	        <field name="partner_address_information"/>
           </group>
-          <newline/>
           <footer>
             <button class="oe_highlight" name="print_report" string="Print" type="object"/>
             or
@@ -28,7 +25,7 @@
                 src_model="res.partner"
                 view_mode="form"
                 target="new"
-                key2="client_action_multi"
+                key2="client_print_multi"
                 id="open_partner_activity_report_wizard_menu_action"/>
 
   </data>
